# FX_python

./: .gitignore  AGENT_GUIDE.md  README.md  excel_addin.py  monetary_meetings_calendar.html  outlook_addin.py  pyproject.toml  requirements.txt  test_fxswaps copy.ipynb  test_fxswaps.ipynb  zzz_old_classes.py
.github/ISSUE_TEMPLATE/: task.yml
.github/agents/: my-agent.agent.md
classes/: FXSwap.py  FXTrade.py  currency_pair.py  direction.py  payment.py
src/fxswap/: __init__.py  excel_addin.py  zzz_old_classes.py
src/fxswap/classes/: FXSwap.py  FXTrade.py  FXrate.py  __init__.py  calendar.py  currency.py  currency_pair.py  direction.py  interest_rate_curve.py  payment.py
tests/: test_calendar.py  test_currency_pair.py  test_interest_rate_curve.py  test_placeholder.py
