[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fxswap"
version = "0.1.0"
description = "FX Swap - A Python library for Foreign Exchange swap and trade operations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "xlwings>=0.28.0",
    "pywin32>=305",
]
authors = [
    {name = "Developer", email = "dev@example.com"}
]
keywords = ["fx", "forex", "swap", "trading", "currency"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Point-Of-Sale",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/fxswap"
Documentation = "https://github.com/yourusername/fxswap#readme"
Repository = "https://github.com/yourusername/fxswap.git"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
